modified fragment shader to allow for custom colors of each primitive

--- a/pacman.html
+++ b/pacman.html
@@ -4,12 +4,12 @@
         <link rel="stylesheet" href="style.css">
       
 <script id="vertex-shader" type="x-shader/x-vertex">
-attribute vec4 vPosition;
+attribute vec2 vPosition;
 uniform float height;
 void
 main()
 {
-    gl_Position = vPosition;
+    gl_Position = vec4(vPosition, 0.0, 1.0);
 }
 </script>
 
