--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <p id="debug"></p>
     <link rel="stylesheet" href="style.css">
-      
+    <p id="debug"></p>
     <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec2 vPosition;
     uniform float height;
@@ -33,7 +34,7 @@
     <div class="lefttxt">text left</div>
     <div class="righttxt">text right</div>
     <div class="mainframe"></div>
-    <canvas id="gl-canvas" width="512" height="512">>
+    <canvas id="gl-canvas" width="460.8" height="512">>
 Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
     
