minor changes to html (removed debug from the canvas)

--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <p id="debug"></p>
+    <!--<p id="debug"></p>-->
     <link rel="stylesheet" href="style.css">
-    <p id="debug"></p>
     <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec2 vPosition;
     uniform float height;
