added directional key inputs and function for rendeering map

--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -33,7 +33,7 @@
     <div class="lefttxt">text left</div>
     <div class="righttxt">text right</div>
     <div class="mainframe"></div>
-    <canvas id="gl-canvas" width="360" height="400">>
+    <canvas id="gl-canvas" width="360px" height="400px">>
 Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
     
