fully completed interface

--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -29,10 +29,10 @@
     <title>Pacman</title>
 </head>
 <body>
-    <h1>Pacman</h1>
-    <div class="lefttxt">text left</div>
-    <div class="righttxt">text right</div>
+    <div class="lefttxt">60</div>
+    <div class="righttxt">0</div>
     <div class="mainframe"></div>
+    <div class="centerframe"></div>
     <canvas id="gl-canvas" width="360px" height="400px">>
 Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
