added HTML elements to record score and countdown timer

--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -29,8 +29,10 @@
     <title>Pacman</title>
 </head>
 <body>
-    <div class="lefttxt">60</div>
-    <div class="righttxt">0</div>
+    <div class="timer" id="timer">60</div>
+    <div class="score-wrapper">
+        <div id="score" class="score">0</div>
+    </div>
     <div class="mainframe"></div>
     <div class="centerframe"></div>
     <canvas id="gl-canvas" width="360px" height="400px">>
