added restart functionality and UI indicator for when game is paused

--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -33,6 +33,7 @@
     <div class="score-wrapper">
         <div id="score" class="score">0</div>
     </div>
+    <div class="paused" id="paused" style="opacity: 0;">PAUSED</div>
     <div class="mainframe"></div>
     <div class="centerframe"></div>
     <canvas id="gl-canvas" width="360px" height="400px">>
