added UI to explain controls and added more status descriptions like death and victory

--- a/PacmanGame/pacman.html
+++ b/PacmanGame/pacman.html
@@ -33,9 +33,13 @@
     <div class="score-wrapper">
         <div id="score" class="score">0</div>
     </div>
-    <div class="paused" id="paused" style="opacity: 0;">PAUSED</div>
     <div class="mainframe"></div>
     <div class="centerframe"></div>
+    <div class="controls" id="controls">Press Arrow Keys to move<br>Press P to pause<br>Press R to resume<br>Press Shift + R to restart</div>
+    <div class="gamestatusPause" id="paused" style="opacity: 0;">PAUSED</div>
+    <div class="gamestatusDeath" id="death" style="opacity: 0;">DEATH</div>
+    <div class="gamestatusHit" id="hit" style="opacity: 0;">HIT</div>
+    <div class="gamestatusVictory" id="victory" style="opacity: 0;">VICTORY</div>
     <canvas id="gl-canvas" width="360px" height="400px">>
 Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
